gitops/apps/example-app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example-app
  labels:
    toolkit.fluxcd.io/tenant: apps
